--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,14 @@ services:
     image: integration
     depends_on:
       - app
+  
+  redis:
+    image: redis:7.0.1-alpine3.16
+    container_name: redis
+    hostname: redis
+    restart: always
+    networks:
+      - redis-chat
 
 volumes:
   pg-data:
