--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 services:
 
   postgres:
-    container_name: postgres
+    container_name: postgres:14-alpine
     image: postgres
     volumes:
       - pg-data:/var/lib/postgresql/data
@@ -13,42 +13,27 @@ services:
     ports:
       - 5432:5432
 
-  rabbitmq:
-    container_name: rabbitmq
-    image: rabbitmq:3.8.12-management
-    ports:
-      - 5672:5672
-      - 15672:15672
 
-  app:
-    build: .
-    container_name: app
-    image: app
-    environment:
-      PG_URL: 'postgres://user:pass@postgres:5432/postgres'
-      RMQ_URL: 'amqp://guest:guest@rabbitmq:5672/'
-    ports:
-      - 8080:8080
-    depends_on:
-      - postgres
-      - rabbitmq
+#  app:
+#    build: .
+#    container_name: app
+#    image: app
+#    environment:
+#      PG_URL: 'postgres://user:pass@postgres:5432/postgres'
+#      RMQ_URL: 'amqp://guest:guest@rabbitmq:5672/'
+#    ports:
+#      - 8080:8080
+#    depends_on:
+#      - postgres
+#      - rabbitmq
 
-  integration:
-    build:
-      context: .
-      dockerfile: integration-test/Dockerfile
-    container_name: integration
-    image: integration
-    depends_on:
-      - app
-  
+
   redis:
     image: redis:7.0.1-alpine3.16
     container_name: redis
     hostname: redis
     restart: always
-    networks:
-      - redis-chat
+
 
 volumes:
   pg-data:
