--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.9'
 services:
 
   postgres:
-    container_name: postgres:14-alpine
-    image: postgres
+    container_name: postgres
+    image: postgres:14-alpine
     volumes:
       - pg-data:/var/lib/postgresql/data
     environment:
