--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - pg-data:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: 'user'
+      POSTGRES_USER: 'postgres'
       POSTGRES_PASSWORD: 'pass'
       POSTGRES_DB: 'postgres'
     ports:
@@ -38,15 +38,15 @@ services:
 #      - rabbitmq
 
 
-  redis:
-    image: redis:7.0.1-alpine3.16
-    container_name: redis
-    hostname: redis
-    restart: always
-    ports:
-      - 6378:6379
-    command: >
-      --requirepass passwordRedis
+#  redis:
+#    image: redis:7.0.1-alpine3.16
+#    container_name: redispkg
+#    hostname: redispkg
+#    restart: always
+#    ports:
+#      - 6378:6379
+#    command: >
+#      --requirepass passwordRedis
 
 
 volumes:
