--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,16 @@
 DISABLE_SWAGGER_HTTP_HANDLER=true
 GIN_MODE=release
+REDIS_ADDRESS=:6379
+REDIS_PASSWORD=passwordRedis
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=pass
+# POSTGRES_HOST=localhost
+
+APP_NAME=go-chat-api
+APP_VERSION=1.0.0
+HTTP_PORT=8080
+LOG_LEVEL=debug
 
 
 
-
-EDENAI_APIKEY=
+EDENAI_APIKEY=asdsa
