--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       POSTGRES_PASSWORD: 'pass'
       POSTGRES_DB: 'postgres'
     ports:
-      - 5431:5432
+      - 5432:5432
 
   pg-admin:
     image: dpage/pgadmin4
@@ -24,18 +24,27 @@ services:
 
 
 
-  #  app:
-#    build: .
-#    container_name: app
-#    image: app
-#    environment:
-#      PG_URL: 'postgres://user:pass@postgres:5432/postgres'
-#      RMQ_URL: 'amqp://guest:guest@rabbitmq:5672/'
-#    ports:
-#      - 8080:8080
-#    depends_on:
-#      - postgres
-#      - rabbitmq
+  app:
+   build: .
+   container_name: app
+   image: go-chat:v1
+   environment:
+     POSTGRES_USERNAME: postgres
+     POSTGRES_PASSWORD: pass
+     POSTGRES_HOST: postgres
+     REDIS_ADDRESS: redispkg:6379
+     REDIS_PASSWORD: passwordRedis
+     DISABLE_SWAGGER_HTTP_HANDLER: true
+     GIN_MODE: release
+     EDENAI_APIKEY: asdsda
+     APP_VERSION: 1.0.0
+     HTTP_PORT: 8080
+     LOG_LEVEL: debug
+
+   ports:
+     - 8080:8080
+   depends_on:
+     - postgres
 
 
   redis:
